--- a/base/app/templates/applicantinfo.html
+++ b/base/app/templates/applicantinfo.html
@@ -1,79 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_admin.html" %}
 
-  <head>
+{% block content %}
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>My Listings</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet">
-    <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
-    <!-- <link href="css/4-col-portfolio.css" rel="stylesheet"> -->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/> -->
-
-
-    <!-- Javascript Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
-
-  </head>
-
-  <body class="index-bg">
-
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#" style="padding-top: 10px;padding-right:25px;"><img src="{{url_for('static',filename='img/$MU.png')}}" width="auto" height="30" alt=""></a>
-        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a>
-        <a class="navbar-brand" href="#"><i><u>{{current_user.email}}</u></i></a>
-
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_admin') }}">Dashboard</a>
-            </li>
-
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">New Listing</a>
-            </li> -->
-
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('mylistings')}}">My Listings
-            </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- Page Content -->
     <br><br><br><br><br>
@@ -82,7 +10,7 @@
       <h2 style="text-align:center"></h2>
         <br>
 
-            <div class="card animated fadeInLeft w-50">
+            <div class="card animated fadeInLeft w-50 cardCount new-card border-0 shadow p-1">
 
                 <div class="card-header">
                   <h1 style="text-align:center;margin-top:30px;">Applicant Info</h1>
@@ -93,7 +21,6 @@
                   <!-- <img src="{{ url_for('static', filename='img/placeholder.jpg')}}" class="img-responsive mx-auto d-block rounded-circle" width="150px" height="150px"> -->
                   <!-- <br> -->
                   <h4 style="text-align:center">{{ user.email }}</h4>
-
 
                   <p style="text-align:center">Gender: {{ user.gender }}</p>
 
@@ -110,7 +37,7 @@
                   <p class="card-text"><small class="text-muted"></small></p>
                 <div class="d-flex justify-content-center">
                   {% if application.status == 'pending' or application.status == 'unread' %}
-                <button type="button" class="btn btn-success btn-lg" style="margin-right:5px;" data-toggle="modal" data-target="#successModal">
+                <button type="button" class="btn btn-lg" style="margin-right:5px; background-color:#FCCE53; color:#fff" data-toggle="modal" data-target="#successModal">
                   Accept
                 </button>
 
@@ -155,7 +82,7 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
         <form method="post">
           {{ form1.hidden_tag() }}
-        {{ form1.submit(class_='btn btn-success') }}
+          {{ form1.submit(class_='btn', style = "background-color:#FCCE53; color:#fff") }}
 
         </form>
       </div>
@@ -199,8 +126,4 @@
 
 <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal --> <!-- modal -->
 
-
-
-  </body>
-
-</html>
+{% endblock %}
