--- a/base/app/templates/register.html
+++ b/base/app/templates/register.html
@@ -16,6 +16,26 @@
     <!-- Custom styles for this template -->
     <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet">
     <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='js/SpryValidationTextField.css')}}" rel="stylesheet">
+    <script src="{{url_for('static',filename='js/SpryValidationTextField.js')}}"></script>
+    <script type="text/javascript">
+function MM_validateForm() { //v4.0
+  if (document.getElementById){
+    var i,p,q,nm,test,num,min,max,errors='',args=MM_validateForm.arguments;
+    for (i=0; i<(args.length-2); i+=3) { test=args[i+2]; val=document.getElementById(args[i]);
+      if (val) { nm=val.name; if ((val=val.value)!="") {
+        if (test.indexOf('isEmail')!=-1) { p=val.indexOf('@');
+          if (p<1 || p==(val.length-1)) errors+='- '+nm+' must contain an e-mail address.\n';
+        } else if (test!='R') { num = parseFloat(val);
+          if (isNaN(val)) errors+='- '+nm+' must contain a number.\n';
+          if (test.indexOf('inRange') != -1) { p=test.indexOf(':');
+            min=test.substring(8,p); max=test.substring(p+1);
+            if (num<min || max<num) errors+='- '+nm+' must contain a number between '+min+' and '+max+'.\n';
+      } } } else if (test.charAt(0) == 'R') errors += '- '+nm+' is required.\n'; }
+    } if (errors) alert('The following error(s) occurred:\n'+errors);
+    document.MM_returnValue = (errors == '');
+} }
+</script>
 
   </head>
 
@@ -38,15 +58,16 @@
 
             <br>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email</label>
+      <span id="spry_email">
+    <label for="exampleInputEmail1">Email</label> <br>
+    {{ form.email(size=32,class_ ='form-control ',placeholder="Email",required='required') }}
+    {% for error in form.email.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
+  <p class="textfieldInvalidFormatMsg">Please type a valid SMU email address.</p>
+    {% if not_smu_email == True %}
 
-              {{ form.email(size=32,class_ ='form-control ',placeholder="Email",required='required') }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-            {% if not_smu_email == True %}
-            <span style="color: red;">[Please enter an SMU Email.]</span>
-            {% endif %}
+    {% endif %}
             </div>
 
             <div class="form-group">
@@ -87,6 +108,9 @@
 
     <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
     <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+    <script type="text/javascript">
+var sprytextfield3 = new Spry.Widget.ValidationTextField("spry_email", "email", {validateOn:["blur"]});
+</script>
     <script>
     $('#myModal').modal({
       backdrop: 'static'
