--- a/base/app/templates/editlisting.html
+++ b/base/app/templates/editlisting.html
@@ -1,102 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_admin.html" %}
 
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>View Listing</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet">
-    <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
-    <!-- <link href="css/4-col-portfolio.css" rel="stylesheet"> -->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/> -->
-
-
-    <!-- Javascript Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
-
-  </head>
-
-  <body class="index-bg">
-
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#" style="padding-top: 10px;padding-right:25px;"><img src="{{url_for('static',filename='img/$MU.png')}}" width="auto" height="30" alt=""></a>
-        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a>
-        <a class="navbar-brand" href="#"><i><u>{{current_user.email}}</u></i></a>
-
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-
-          {% if current_user.role == 'admin' %}
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_admin') }}">Dashboard</a>
-            </li>
-
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">New Listing</a>
-            </li> -->
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('mylistings')}}">My Listings
-            </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-            {% endif %}
-
-            {% if current_user.role == 'regular' %}
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_reg') }}">Featured Jobs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Find Jobs</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="">My Jobs</a>
-            </li>
-
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-            {% endif %}
-
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block content %}
 
     <!-- Page Content -->
     <br><br><br><br><br><br><br>
@@ -116,7 +20,7 @@
     <div class="container d-flex justify-content-center">
       <!-- <br><br><br> -->
 
-      <div class="card animated fadeInLeft w-75">
+      <div class="card animated fadeInLeft w-75 cardCount new-card">
         <div class="card-header">
           <a href="{{ url_for('mylistings')}}"><p class="text-info">Back to Listings</p></a>
       <h1 style="text-align:center;margin-top:25px;">Edit Listing</h1>
@@ -172,7 +76,7 @@
 
           <!-- <div class="form-group"> -->
             <!-- <div class="row"> -->
-            {{ form.submit(class_='btn btn-info btn-lg btn-block') }}
+            {{ form.submit(class_='btn btn-lg btn-block', style = "background-color: #FCCE53; color:#fff;") }}
               </form>
               <br>
               <!-- <form method="post">
@@ -254,5 +158,7 @@
     }, false);
       </script>
 
+
+      {% endblock %}
 
 </html>
