--- a/base/app/templates/index_reg.html
+++ b/base/app/templates/index_reg.html
@@ -1,93 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Featured</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet">
-    <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
-
-  </head>
-
-  <body class="index-reg-bg">
+{% extends "base_reg.html" %}
 
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#" style="padding-top: 10px;padding-right:25px;"><img src="{{url_for('static',filename='img/$MU.png')}}" width="auto" height="30" alt=""></a>
-        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a><a class="navbar-brand" href="{{ url_for('myprofile',id=current_user.id)}}"><i><u>{{current_user.email}}</u></i></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Menu
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <h3 style="font-size:25px !important; margin-top:4px;" class="nav-link dropdown-header text-info"><u>Jobs</u></h3>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('index_reg') }}">Featured Jobs</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('findjobs') }}">Find Jobs</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myjobs')}}">My Jobs</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('morejobs')}}">More Jobs</a>
-              <h3 style="font-size:25px !important; margin-top:4px;" class="nav-link dropdown-header text-info"><u>Profile</u></h3>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myprofile', id=current_user.id)}}">My Profile</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('myfeedback')}}">My Feedback</a>
-                <a class="nav-link dropdown-item text-secondary" href="{{ url_for('logout') }}">Logout</a>
-            </div>
-          </div>
-         </ul>
-        </div>
-      </div>
-    </nav>
-
+{% block content %}
+<body>
     <!-- Page Content -->
     <div class="container">
       <br><br><br><br><br><br>
 
-      <h1 style="text-align:center">Featured Jobs</h1>
+      <h1 class="animate animated flipInX" style="text-align:center; color:#0B365D">Featured Jobs</h1>
         <br>
 
       <!-- for loop -->
-      {% for item in z %}
+      {% for job in merged_set %}
       <div class="card-deck">
-        <div class="card animate animated fadeInLeft">
+        <div class="card animate animated fadeInUp new-card shadow p-1">
 
           <div class="card-body">
             <class="card-title">
 
-            <p style='font-size:20px;'><b>TITLE: {{ current_user.email }}</b></p>
+            <h4 style='font-size:20px;'>{{ job.title }}</h4>
+            <h6 style='font-size:15px;color:#aaa'>{{ job.organization }}</h6>
 
-            <div class = 'float-right'>
-              <a data-toggle="collapse" href="#{{item}}" aria-expanded="true" aria-controls="{{item}}"><button type="button" class="btn btn-secondary" style="margin-top:0.5px;">More Info</button></a>
-              <button type = "button" class = "btn btn-secondary">Apply Now</button>
+            <div class = 'float-right' style="margin-top:-35px">
+              <a href="/applyjob/{{ job.id }}"><button type="button" class="btn btn-secondary" style="margin-top:-20px; background-color: #f5b200; border: none; color:#fff">More Info</button></a>
+              <!-- <button type = "button" class = "btn btn-secondary" style="margin-top:0.5px; background-color: #F2C44C; border: none; color:#fff">Apply Now</button> -->
+              <!-- style = "background-color: #5DA2D5; border-color:#5DA2D5" -->
             </div>
 
-            <p class="card-text">Either job description here, pay, or event date details.</p>
+            <p class="card-text"></p>
+            <p class="card-text" style="font-size:10px">{{ job.timestamp.strftime('%Y-%m-%d') }}</p>
+
           </div>
 
 
-          <div id = "{{item}}" class = "collapse">
+          <!-- <div id = "{{item}}" class = "collapse">
               <div class = "card-body">
-                  <p class = "card-text"> More info here! More job details </p>
+                  <p class = "card-text"> {{ job.description }} </p>
               </div>
-          </div>
+          </div> -->
 
-          <div class="card-footer text-muted">
-            <p class = "card-text">Posted: 25/12/2018                 Last updated: 2 days ago</p>
-          </div>
+
 
         </div>
       </div>
@@ -96,13 +48,7 @@
 
         <br><br>
     </div>
+</body>
 
     <!-- /.container -->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-
-  </body>
-
-</html>
+  {% endblock %}
