--- a/base/app/templates/viewapplicants.html
+++ b/base/app/templates/viewapplicants.html
@@ -1,79 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base_admin.html" %}
 
-  <head>
+{% block content %}
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>My Listings</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet">
-    <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
-    <!-- <link href="css/4-col-portfolio.css" rel="stylesheet"> -->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/> -->
-
-
-    <!-- Javascript Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
-
-  </head>
-
-  <body class="index-bg">
-
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#" style="padding-top: 10px;padding-right:25px;"><img src="{{url_for('static',filename='img/$MU.png')}}" width="auto" height="30" alt=""></a>
-        <a class="navbar-brand" style="color:#fff; padding-bottom: 3px;">Welcome,</a>
-        <a class="navbar-brand" href="#"><i><u>{{current_user.email}}</u></i></a>
-
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index_admin') }}">Dashboard</a>
-            </li>
-
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">New Listing</a>
-            </li> -->
-
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('mylistings')}}">My Listings
-            </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-
-
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -86,10 +14,20 @@
 
           <div class="card-column">
         {% for a in viewapplicants_list %}
-          <div class="card animated fadeInUp">
+          <div class="card animated fadeInUp cardCount new-card shadow p-1">
             <div class="card-body">
 
+              <div class="float-right">
+                {% if a[0].status == 'accepted' and a[0].feedback_given == 'No' %}
+                <a href='{{ url_for('givefeedback', id=post.id, user_id=a[1].id) }}'><button type="button" class="btn" style="background-color:#FCCE53; color:#fff;">Job Done? Give some feedback...</button></a>
+                {% elif a[0].status == 'accepted' and a[0].feedback_given == 'Yes' %}
+                <button type="button" class="btn btn-light disabled">Thanks for your feedback.</button>
+                {% endif %}
+                <a href='{{ url_for('applicantinfo', id=post.id, user_id=a[1].id) }}'><button type="button" class="btn" style = "background-color: #F2C44C; color:#fff;">View Profile</button></a>
+              </div>
+
               <h5 class="card-title">{{ a[1].email }}</h5>
+
               {% if a[0].status == 'unread' %}
                 <span class="badge badge-pill badge-secondary" style="margin-bottom:18px">Not Read</span>
                 {% elif a[0].status == 'pending' %}
@@ -101,32 +39,12 @@
               {% endif %}
 
               <p class="card-text"><small class="text-muted">Applied on {{ a[0].timestamp.strftime('%Y-%m-%d') }}</small></p>
-              <a href='{{ url_for('applicantinfo', id=post.id, user_id=a[1].id) }}'><button type="button" class="btn btn-info">View Profile</button></a>
-
-              {% if a[0].status == 'accepted' and a[0].feedback_given == 'No' %}
-              <a href='{{ url_for('givefeedback', id=post.id, user_id=a[1].id) }}'><button type="button" class="btn btn-light">Job Done? Give some feedback...</button></a>
-              {% elif a[0].status == 'accepted' and a[0].feedback_given == 'Yes' %}
-              <button type="button" class="btn btn-light disabled">Thanks for your feedback.</button>
-              {% endif %}
-
-
             </div>
           </div>
           <br>
         {% endfor %}
       </div>
-
-
-
-
-
-
-
-
-
     </div>
     <input type="hidden" id="refreshed" value="no">
 
-  </body>
-
-</html>
+{% endblock %}
